[metadata]
name = vkoga
version = 0.0.1
license = GPL-3.0-only
description = Python implementation of the Vectorial Kernel Orthogonal Greedy Algorithm.
long_description = file: README.md
long_description_content_type = text/markdown,
author = Gabriele Santin, Tizian Wenzel

[options]
packages = find:
include_package_data = True
install_requires =
    matplotlib
   numpy
   scipy
   scikit-learn 

[options.packages.find]
where=src
